adding new files

--- a/Django-CRM-mastery-app-Project-1-YT-main/dev/crm/webapp/templates/webapp/dashboard.html
+++ b/Django-CRM-mastery-app-Project-1-YT-main/dev/crm/webapp/templates/webapp/dashboard.html
@@ -9,7 +9,10 @@
     <a class="btn btn-outline-primary btn-sm" href="{% url 'create-record' %}">
         Create a new record &nbsp; <i class="fa fa-plus-circle" aria-hidden="true"></i>
     </a>
-    <a class="btn btn-primary" href="{% url 'add_interaction' customer_id=customer.id %}">Add Interaction</a>
+    <a class="btn btn-primary" href="{% url 'interaction-tracking' %}">Interaction Tracking</a>
+<a class="btn btn-primary" href="{% url 'sales-management' %}">Sales Management</a>
+<a class="btn btn-primary" href="{% url 'service-management' %}">Service Management</a>
+
 
 
 
