--- a/Django-CRM-mastery-app-Project-1-YT-main/dev/crm/webapp/templates/webapp/interaction_tracking.html
+++ b/Django-CRM-mastery-app-Project-1-YT-main/dev/crm/webapp/templates/webapp/interaction_tracking.html
@@ -1,6 +1,7 @@
+<!-- interaction_tracking.html -->
 {% extends 'webapp/base.html' %}
 {% block content %}
-    <h2>Add Interaction</h2>
+    <h2>Interaction Tracking</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
